# app_usage_demo_version

./: README.md  TODO_LIST.md  admin_app - pure bootstrap.7z
mcp-server-app-usage/: PROMPT_README.md  README.md  main.py  pyproject.toml  server_instance.py
mcp-server-app-usage/advanced/prompts/: churn_rate_analysis.md  growth_trend_analysis.md  heavy_users.md  inactive_users.md  median_session_length.md  new_vs_returning_users.md  session_length_analysis.md
mcp-server-app-usage/advanced/tools/: __init__.py  churn_rate_analysis.py  growth_trend_analysis.py  heavy_users.py  inactive_users.py  median_session_length.py  new_vs_returning_users.py  session_length_analysis.py
mcp-server-app-usage/config/: __init__.py  database.py  settings.py
mcp-server-app-usage/cross_analysis/prompts/: common_app_combinations.md  multi_app_users.md  usage_percentage_breakdown.md  user_app_matrix.md
mcp-server-app-usage/cross_analysis/tools/: __init__.py  common_app_combinations.py  multi_app_users.py  usage_percentage_breakdown.py  user_app_matrix.py
mcp-server-app-usage/docs/: DEPLOYMENT.md
mcp-server-app-usage/general/prompts/: list_applications.md
mcp-server-app-usage/general/tools/: __init__.py  app_details.py  app_versions.py  legacy_apps.py  list_applications.py  recent_releases.py  top_publishers.py  tracking_status.py
mcp-server-app-usage/shared/: __init__.py  analytics_utils.py  database_utils.py  date_utils.py  models.py
mcp-server-app-usage/time_based/prompts/: active_users_count.md  daily_usage_trend.md  new_users_count.md  onboarding_trend.md  peak_usage_hours.md  usage_comparison.md  usage_trends.md
mcp-server-app-usage/time_based/tools/: __init__.py  active_users_count.py  daily_usage_trend.py  new_users_count.py  onboarding_trend.py  peak_usage_hours.py  usage_comparison.py  usage_trends.py
mcp-server-app-usage/usage_stats/prompts/: average_usage_time.md  platform_usage_stats.md  top_apps_by_usage.md  top_apps_by_users.md  total_usage_period.md  user_count_stats.md
mcp-server-app-usage/usage_stats/tools/: __init__.py  average_usage_time.py  platform_usage_stats.py  top_apps_by_usage.py  top_apps_by_users.py  total_usage_period.py  usage_time_stats.py  user_count_stats.py
mcp-server-app-usage/user_centric/prompts/: app_users.md  user_app_hours.md  user_applications.md  user_last_active.md  user_last_app.md  user_top_apps.md  user_total_hours.md
mcp-server-app-usage/user_centric/tools/: __init__.py  app_users.py  user_app_hours.py  user_applications.py  user_last_active.py  user_last_app.py  user_top_apps.py  user_total_hours.py
mcp-server-app-usage/version_tracking/prompts/: legacy_vs_modern.md  outdated_versions.md  version_distribution.md  version_usage_breakdown.md
mcp-server-app-usage/version_tracking/tools/: __init__.py  legacy_vs_modern.py  (+3 more)
(+35 files in other folders)
